--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,1 +1,28 @@
-w
+p
+	-if user_signed_in?
+		p = current_user.email 
+		p = link_to 'Sign out',  destroy_user_session_path, method: :delete 	
+	-else
+	p = link_to 'Sign in', new_user_session_path
+	p = link_to 'View questions', questions_path
+p
+	=link_to 'Write answer', new_question_answer_path(@question)
+p  
+	strong Title:
+p
+	=@question.title 
+p
+	strong Question:
+p
+	=@question.body
+p
+	=link_to 'Delete question', question_path(@question), method: :delete
+p  
+	strong Answers:
+p
+	-@question.answers.each do |answer|
+		p = answer.body
+		- if current_user == answer.user and user_signed_in?
+			p = link_to "Remove answer", answer, method: :delete
+
+	
