--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -12,10 +12,12 @@ p
   strong Questions
 
 p
-  -@questions.each do |q|
-    p =q.title
-    p =q.body
-    => link_to 'View answers', question_path(q)
-    - if current_user == q.user and user_signed_in?
-      = link_to 'Delete question', question_path(q), method: :delete  
+  -@questions.each do |question|
+    li
+    p = question.title
+    p = question.body
+    => link_to 'View answers', question_path(question)
+    - if user_signed_in? && current_user.id == question.user_id 
+      = link_to 'Delete question', question_path(question), method: :delete
+
 
