--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -18,11 +18,13 @@ p
 p
   =link_to 'Delete question', question_path(@question), method: :delete
 p  
-  strong Answers:
-p
-  -@question.answers.each do |answer|
-    li = answer.body
-    - if user_signed_in? && current_user.id == answer.user_id 
-      p = link_to "Remove answer", answer, method: :delete
+
+.answers
+   = render 'answers'
+
+= form_for [@question, @answer], remote: true do |f|
+  = f.label :body, "Your answer"
+  p = f.text_area :body
+  = f.submit "Send answer"
 
   
