--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,2 +1,2 @@
-$ ('.answers').html('<%= j render 'questions/answers' %>')
-$ ('#answer_body').val('');_
+$('.answers').append('<%= j render partial: 'questions/answer', locals: {answer: @answer} %>');
+$('#answer_body').val('')
