--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -12,12 +12,9 @@ p
   strong Questions
 
 p
+.questions
   -@questions.each do |question|
-    li
-    p = question.title
-    p = question.body
-    => link_to 'View answers', question_path(question)
-    - if user_signed_in? && current_user.id == question.user_id 
-      = link_to 'Delete question', question_path(question), method: :delete
+    = render partial: 'question', locals: {question: question}
+  
 
 
