--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -13,8 +13,7 @@ p
 
 p
 .questions
-  -@questions.each do |question|
-    = render partial: 'question', locals: {question: question}
+  =render @questions
   
 
 
