--- a/app/views/answers/update.js.erb
+++ b/app/views/answers/update.js.erb
@@ -3,7 +3,7 @@
         $('.answer-errors').html('<%= j message %>');
     <% end %>
 <% else %>
-    $('#answer-<%= @answer.id %>').replaceWith("<%= j render partial: 'answer', locals: {answer: @answer} %>");
+    $('#answer-<%= @answer.id %>').replaceWith("<%= j render @answer, locals: {answer: @answer} %>");
     $('.edit-answer-link').click(function(e) {
         e.preventDefault();
         $(this).hide();
