--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,8 +1,14 @@
-   - if answer.persisted? 
+   - if answer.persisted?
+    hr 
      .answer id = "answer-#{answer.id}" class=('best-answer' if answer.best_answer)
         - if answer.best_answer
           p.h4 This answer is best
         p = answer.body
+        p Attachments
+        - answer.attachments.each do |a|
+          ul
+            li = link_to a.file.filename, a.file.url
+
         - if user_signed_in? && current_user.id == answer.question.user_id
           p = link_to "Mark as best", best_answer_path(answer), method: :patch, remote: true
         - if user_signed_in? && current_user.id == answer.user_id 
