--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -5,9 +5,13 @@
           p.h4 This answer is best
         p = answer.body
         p Attachments
+        ul
         - answer.attachments.each do |a|
-          ul
-            li = link_to a.file.filename, a.file.url
+          li id="attachment-id-#{a.id}"
+            => link_to a.file.identifier, a.file.url
+            - if user_signed_in? && current_user.id == @answer.user_id
+              =link_to 'Delete file', attachment_path(a), method: :delete,
+                  data: {confirm: "Delete file?"}, remote: true
 
         - if user_signed_in? && current_user.id == answer.question.user_id
           p = link_to "Mark as best", best_answer_path(answer), method: :patch, remote: true
