--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -18,11 +18,12 @@ p =>@question.body
 
 p Attachments
 
-- @question.attachments.each do |a|
-  ul
-    li = link_to a.file.filename, a.file.url
- 
-
+ul
+  - @question.attachments.each do |a|
+    li id="attachment-id-#{a.id}"
+      => link_to a.file.identifier, a.file.url
+      - if user_signed_in? && current_user.id == @question.user_id
+        =link_to 'Delete file', attachment_path(a), method: :delete, data: {confirm: "Delete file?"}, remote: true
 
 p =link_to 'Delete question', question_path(@question), method: :delete
  
@@ -30,9 +31,10 @@ hr
   = form_for [@question, @answer], remote: true do |f|
     p = f.label :body, "Your answer"
     p = f.text_area :body
-    p = f.fields_for :attachments do |a|
-      p = a.label :file
-      p = a.file_field :file
+    p = f.fields_for :attachments do |attach|
+      p = render partial: 'attachments/a_fields', locals: {f: attach}
+      p = link_to_add_association 'Add file', f, :attachments, partial: 'attachments/a_fields'
+    
     p = f.submit "Send answer"
     .answer-info
 
