--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,7 +1,10 @@
-  div id="question-id-#{question.id}"
+div id="question-id-#{question.id}"
+    hr
+      => 'Rating'
+      = question.count_votes 
+    br
     p = question.title
     p = question.body
-
     p = link_to 'View answers', question_path(question)
     - if user_signed_in? && current_user.id == question.user_id 
       p= link_to 'Delete', question, method: :delete
