--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -41,8 +41,11 @@ hr
     p = f.submit "Send answer"
     .answer-info
 
-.answers
+.answers data={question_id: "#{@question.id}"}
   = render @question.answers
+
+= subscribe_to "/questions/#{@question.id}/answers"  
+
     
 
 
