--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -14,7 +14,7 @@
           => link_to a.file.identifier, a.file.url
           - if user_signed_in? && current_user.id == @answer.user_id
             =link_to 'Delete file', attachment_path(a), method: :delete,
-                data: {confirm: "Delete file?"}, remote: true
+              data: {confirm: "Delete file?"}, remote: true
 
       - if user_signed_in? && current_user.id == answer.question.user_id
         p = link_to "Mark as best", best_answer_path(answer), method: :patch, remote: true
@@ -27,3 +27,14 @@
             = f.text_area :body
             = f.submit 'Save'
       
+      .comments 
+        strong Comments
+      - answer.comments.each do |c|
+        = render partial: 'comments/comment', locals: {comment: c}  
+      = link_to 'Add comment','', class: 'create-comment-link', data: { commentable_id: answer.id }
+      = form_for [ answer, answer.comments.build ], method: "post", remote: true, html: { id: "create-comment-#{answer.id}"} do |f|
+        = f.label :comment_body, "Comment"
+        = f.text_area :comment_body
+        = f.submit 'Create'
+        .comment-errors
+
