--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -5,6 +5,6 @@
 <% else %>
   $('.new_answer #answer_body').val('');
 <% publish_to "/questions/#{@question.id}/answers" do %>
-  $('.answers').append('<%= j render @answer, locals: {answer: @answer} %>');
+  $('.answers').append('<%= j render @answer %>');
   <% end %>
 <% end %>
