--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -4,7 +4,7 @@
     <% end %>
 <% else %>
 <% publish_to "/questions/#{@question.id}/comments" do %>
-  $('#<%= @comment.commentable_type.downcase %>-<%= @comment.commentable_id %> .comments').append('<%= j render @comment, locals: {comment: @comment} %>');
+  $('#<%= @comment.commentable_type.downcase %>-<%= @comment.commentable_id %> .comments').append('<%= j render @comment %>');
   <% end %>
   $('#<%= @comment.commentable_type.downcase %>-<%= @comment.commentable_id %> #comment_comment_body').val('');
   $('#<%= @comment.commentable_type.downcase %>-<%= @comment.commentable_id %> .new_comment').hide();
