--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -3,6 +3,7 @@
       $('#<%= @comment.commentable_type.downcase %>-<%=@comment.commentable_id %> .comment-errors').html('<%= j message %>');
     <% end %>
 <% else %>
+<% @question = @comment.commentable_type == 'Question' ? @comment.commentable : @comment.commentable.question %>
 <% publish_to "/questions/#{@question.id}/comments" do %>
   $('#<%= @comment.commentable_type.downcase %>-<%= @comment.commentable_id %> .comments').append('<%= j render @comment %>');
   <% end %>
