--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -12,13 +12,13 @@
       - answer.attachments.each do |a|
         li id="attachment-id-#{a.id}"
           => link_to a.file.identifier, a.file.url
-          - if user_signed_in? && current_user.id == @answer.user_id
+          - if can?(:manage, a)
             =link_to 'Delete file', attachment_path(a), method: :delete,
               data: {confirm: "Delete file?"}, remote: true
 
-      - if user_signed_in? && current_user.id == answer.question.user_id
+      - if can?(:best, answer)
         p = link_to "Mark as best", best_answer_path(answer), method: :patch, remote: true
-      - if user_signed_in? && current_user.id == answer.user_id 
+      - if can?(:crud, answer)
         p = link_to 'Edit','', class: 'edit-answer-link', data: { answer_id: answer.id }
         p = link_to 'Delete', answer, method: :delete, data: { confirm: 'Delete answer?' }, remote: true  
         p 
