--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,40 +1,42 @@
- - if answer.persisted?
-  hr 
-   .answer id = "answer-#{answer.id}" class=('best-answer' if answer.best_answer)
-      = render partial: 'votes/vote', locals: {votable: answer, type: "answer"}
-      - if answer.best_answer
-        p.h4 This answer is best
-        br
+-cache answer do
+   - if answer.persisted?
+    hr 
+     .answer id = "answer-#{answer.id}" class=('best-answer' if answer.best_answer)
+        = render partial: 'votes/vote', locals: {votable: answer, type: "answer"}
+        - if answer.best_answer
+          p.h4 This answer is best
+          br
 
-      p = answer.body
-      p Attachments
-      ul
-      - answer.attachments.each do |a|
-        li id="attachment-id-#{a.id}"
-          => link_to a.file.identifier, a.file.url
-          - if can?(:manage, a)
-            =link_to 'Delete file', attachment_path(a), method: :delete,
-              data: {confirm: "Delete file?"}, remote: true
+        p = answer.body
+        p Attachments
+        ul
+        - answer.attachments.each do |a|
+          li id="attachment-id-#{a.id}"
+            => link_to a.file.identifier, a.file.url
+            - if can?(:manage, a)
+              =link_to 'Delete file', attachment_path(a), method: :delete,
+                data: {confirm: "Delete file?"}, remote: true
 
-      - if can?(:best, answer)
-        p = link_to "Mark as best", best_answer_path(answer), method: :patch, remote: true
-      - if can?(:crud, answer)
-        p = link_to 'Edit','', class: 'edit-answer-link', data: { answer_id: answer.id }
-        p = link_to 'Delete', answer, method: :delete, data: { confirm: 'Delete answer?' }, remote: true  
-        p 
-          = form_for answer, method: "patch", remote: true, html: { id: "edit-answer-#{answer.id}"} do |f|
-            = f.label :body, "Edit_your_answer"
-            = f.text_area :body
-            = f.submit 'Save'
-      
-      .comments 
-        strong Comments
-      - answer.comments.each do |c|
-        = render partial: 'comments/comment', locals: {comment: c}  
-      = link_to 'Add comment','', class: 'create-comment-link', data: { commentable_id: answer.id }
-      = form_for [ answer, answer.comments.build ], method: "post", remote: true, html: { id: "create-comment-#{answer.id}"} do |f|
-        = f.label :comment_body, "Comment"
-        = f.text_area :comment_body
-        = f.submit 'Create'
-        .comment-errors
+        - if can?(:best, answer)
+          p = link_to "Mark as best", best_answer_path(answer), method: :patch, remote: true
+        - if can?(:crud, answer)
+          p = link_to 'Edit','', class: 'edit-answer-link', data: { answer_id: answer.id }
+          p = link_to 'Delete', answer, method: :delete, data: { confirm: 'Delete answer?' }, remote: true  
+          p 
+            = form_for answer, method: "patch", remote: true, html: { id: "edit-answer-#{answer.id}"} do |f|
+              = f.label :body, "Edit_your_answer"
+              = f.text_area :body
+              = f.submit 'Save'
+        
+        .comments 
+          strong Comments
+        - answer.comments.each do |c|
+          -cache c do 
+            = render partial: 'comments/comment', locals: {comment: c}  
+        = link_to 'Add comment','', class: 'create-comment-link', data: { commentable_id: answer.id }
+        = form_for [ answer, answer.comments.build ], method: "post", remote: true, html: { id: "create-comment-#{answer.id}"} do |f|
+          = f.label :comment_body, "Comment"
+          = f.text_area :comment_body
+          = f.submit 'Create'
+          .comment-errors
 
