--- a/app/views/answers/_answers.html.slim
+++ b/app/views/answers/_answers.html.slim
@@ -1,2 +1,3 @@
 - @question.answers.each do |answer|
-  = render 'answer', answer: answer
+  -cache answer do 
+    = render 'answer', answer: answer
